Fixes for horizontal scrolling - theoretically

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -14,15 +14,18 @@ $panelRadius: 3px;
 $panelShadow: 0 2px 4px rgba(0,0,0, .3);
 
 /* Basic style overrides */
-html {
-    background-image: url('../images/paper.png');
-}
-
 body {
     color: $dark_gray;
     font-family: 'Open Sans', sans-serif;
     font-weight: 400;
     margin: 0; padding: 0;
+    position:absolute;
+    top:0;
+    left:0;
+    right:0;
+    bottom:0;
+    clip: rect(0, auto, auto, 0);
+    background-image: url('../images/paper.png');
 }
 
 a {
